--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "3.4.3",
     "react-tilty": "^1.3.3"
   },
