--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.14.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1",
     "react-tilty": "^1.3.3"
   },
   "scripts": {
